# Multi-slot-Bootloader

./: CMakeLists.txt  READ.md  README.md  bootloader.c  bsp.c  bsp.h  delay.c  delay.h  final.map  float_point.c  float_point.h  linker.ld  main.c  startup.c  stm32f4xx.h  stm32f4xx_gpio.c  stm32f4xx_gpio.h  toolchain.cmake  uart.c  uart.h
